--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,11 @@
+/404_error.png
+/Block.class
 /Camera.class
 /Glasspane.class
-/playerImg.jpg
+/Manipulator.class
+/Object_Shell.class
+/Protagonist.class
+/Runner.class
+/bounce.jpg
+/dirt.jpg
 /playerImg.png
